2024-01-26T08:17:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7665575914 # 58
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 732 1157 / 746 1179
* notice: next accum: outdated-unq outdated-all / unq all: 734 1159 / 747 1180
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-12] / [2024-01-26]

2024-01-26T01:04:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662549780 # 57
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 5 22
* notice: prev accum: outdated-unq outdated-all / unq all: 732 1157 / 746 1178
* notice: next accum: outdated-unq outdated-all / unq all: 732 1157 / 746 1179
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-01-25]

2024-01-25T16:20:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7657401953 # 56
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 731 1155 / 746 1178
* notice: next accum: outdated-unq outdated-all / unq all: 732 1157 / 746 1178
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-25T08:19:35Z: