@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-26T08:17:34Z",
+  "timestamp" : "2024-01-27T01:02:59Z",
   "count_outdated" : 1159,
   "uniques_outdated" : 734,
-  "count" : 1180,
-  "uniques" : 747,
+  "count" : 1182,
+  "uniques" : 748,
   "clones" : [
     {
       "timestamp": "2024-01-14T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
