@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 4,
+  "count": 23,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-01-14T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
