@@ -1,3 +1,12 @@
+2024-01-27T01:02:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7675221993 # 60
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
+* notice: last 14d: unq all: 5 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 734 1159 / 747 1180
+* notice: next accum: outdated-unq outdated-all / unq all: 734 1159 / 748 1182
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-01-26]
+
 2024-01-26T08:17:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7665575914 # 58
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
